letter spacing fix

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -25,7 +25,7 @@
   left: 216px;
   top: 50%;
   transform: translateY(-50%);
-  letter-spacing: 8;
+  letter-spacing: 0.3em;
   font-size: 24px;
   font-weight: 200;
 }
@@ -35,7 +35,7 @@
   left: 392px;
   top: 50%;
   transform: translateY(-50%);
-  letter-spacing: 4;
+  letter-spacing: 0.34em;
   font-size: 12px;
   font-weight: 200;
 }
